--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/shakotsav
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/shakotsav
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+#Production on AWS Server
+#spring.datasource.url=jdbc:mysql://shakotsav.ct50ilijyssl.ap-south-1.rds.amazonaws.com:3306/shakotsav
+#spring.datasource.username=root
+#spring.datasource.password=ketanbhavsar
+
+#Production on Pravin's server
+spring.datasource.url = jdbc:mysql://localhost:3306/shakotsav
+spring.datasource.username = test
+spring.datasource.password = test
+
 
 # ===============================
 # = JPA / HIBERNATE
